Add timeout (3s) and migrate to java 15 and gradle 6.7.1